--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0"
   },
