--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,9 @@ stages:
 .deploy-common: &deploy-common
   stage: deploy
   script:
-    npm ci
-    npm run build
-    cp -r dist/. ~/$CI_ENVIRONMENT_SLUG/frontend
+    - npm ci
+    - npm run build
+    - cp -r dist/. ~/$CI_ENVIRONMENT_SLUG/frontend
 
 deploy:staging:
   environment: staging
