--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
