--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3",
-    "vite": "^5.2.6",
+    "unplugin-inject-preload": "^2.0.3",
+    "vite": "^5.2.7",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
