--- a/package.json
+++ b/package.json
@@ -10,34 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.3",
-    "clsx": "^2.1.0",
-    "hamburger-react": "^2.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.3",
+    "@reduxjs/toolkit": "^2.2.5",
+    "base-64": "^1.0.0",
+    "clsx": "^2.1.1",
+    "hamburger-react": "^2.5.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.4",
     "react-range-slider-input": "^3.0.7",
-    "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
-    "tailwind-merge": "^2.2.2",
-    "zod": "^3.22.4"
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "unplugin-inject-preload": "^2.0.3",
-    "vite": "^5.2.9",
+    "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
