--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 VITE_DEV_USERNAME = 'tester';
-VITE_DEV_PASSWORD = 'nH7w1<!464H$';
-API_URL = http://api.onelinelater.ru/
+VITE_DEV_PASSWORD = 'test';
+API_URL = http://api.test/
